# ruos

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  build-iso.ps1  limine-ssd.conf  limine.conf
kernel/: Cargo.toml  build.rs  linker.ld  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/src/: acpi_init.rs  blockdev.rs  crc32.rs  disk.rs  gdt.rs  gpt.rs  idt.rs  kevent.rs  keyboard.rs  klog.rs  kprint.rs  main.rs  memory.rs  modules.rs  pic.rs  power.rs  proc.rs  rng.rs  rtc.rs  serial.rs  smp.rs  timer.rs
kernel/src/ahci/: atapi.rs  hba.rs  mod.rs  port.rs
kernel/src/apic/: ioapic.rs  lapic.rs  mmio.rs  mod.rs
kernel/src/boot/: banner.rs  clock.rs  error.rs  log.rs  mod.rs
kernel/src/boot/phases/: arch.rs  devices.rs  fs.rs  interrupts.rs  media_bin.rs  mem.rs  mod.rs  pci.rs  storage.rs  (+3 more)
kernel/src/console/: ansi.rs  boxdraw.rs  engine_test.rs  fb.rs  fb_init.rs  font.rs  glyphcache.rs  grid.rs  mod.rs  render.rs  serial_con.rs  surface.rs
kernel/src/cpu/: ap.rs  mod.rs
kernel/src/executor/: delay.rs  mod.rs
kernel/src/gfx/: mod.rs
kernel/src/keyboard/: mod.rs  queue.rs
kernel/src/memory/: alloc_magazine.rs  alloc_percore_talc.rs  allocbench.rs  dma.rs  exec.rs  frames.rs  heap.rs  mapper.rs  mod.rs  tlb.rs
kernel/src/mouse/: mod.rs
kernel/src/net/: dns.rs  icmp.rs  loopback.rs  mod.rs  netconsole.rs  sockets.rs  virtio.rs  wifi.rs
kernel/src/pci/: device.rs  ecam.rs  mod.rs
kernel/src/pipe/: mod.rs
kernel/src/pty/: ldisc.rs  mod.rs  pair.rs  spsc.rs  termios.rs
kernel/src/sched/: cpustat.rs  mod.rs
kernel/src/service/: checks.rs  json.rs  mod.rs  schedule.rs  topo.rs  unitfile.rs  yaml.rs
kernel/src/smp/: inbox.rs  mod.rs  pool.rs
kernel/src/ssh/: authkeys.rs  channel.rs  hostkey.rs  mod.rs  password.rs  rng_bridge.rs  server.rs  sunset_io.rs
kernel/src/sync/: mod.rs
kernel/src/usb/: control.rs  device.rs  encoding.rs  hid.rs  hub.rs  mod.rs  mouse.rs  msc.rs  registry.rs  usage.rs
kernel/src/vfs/: block_on.rs  devices.rs  error.rs  fat32.rs  fd.rs  file.rs  fs.rs  iso9660.rs  mod.rs  path.rs  tmpfs.rs
kernel/src/wasm/: exec_queue.rs  fiber.rs  mod.rs  pipeline.rs  ssh_spawn.rs  state.rs  suspend.rs
tools/boundcheck-test/: Cargo.toml
tools/boundcheck-test/src/: main.rs
tools/mtstress/: Cargo.toml
tools/mtstress/src/: main.rs
tools/mtwin/: Cargo.toml
tools/mtwin/src/: lib.rs
tools/wt-bringup/: Cargo.toml
tools/wt-bringup/src/: lib.rs
tools/wt-precompile/: Cargo.toml
tools/wt-precompile/src/: main.rs
tools/wt-readline/: Cargo.toml
tools/wt-readline/src/: main.rs
user/: Cargo.toml
user/cat/: Cargo.toml
user/cat/src/: main.rs
user/clear/: Cargo.toml
user/clear/src/: main.rs
user/client/: Cargo.toml
user/client/src/: main.rs
user/cp/: Cargo.toml
user/cp/src/: main.rs
user/cut/: Cargo.toml
user/cut/src/: main.rs
user/date/: Cargo.toml
user/date/src/: main.rs
user/df/: Cargo.toml
user/df/src/: main.rs
user/diff/: Cargo.toml
user/diff/src/: main.rs
user/disks/: Cargo.toml
user/disks/src/: main.rs
user/dmesg/: Cargo.toml
user/dmesg/src/: main.rs
user/du/: Cargo.toml
user/du/src/: main.rs
user/echo/: Cargo.toml
user/find/: Cargo.toml
user/find/src/: main.rs
user/free/: Cargo.toml
user/free/src/: main.rs
user/grep/: Cargo.toml
user/grep/src/: main.rs
user/gunzip/: Cargo.toml
user/gunzip/src/: main.rs
user/gzip/: Cargo.toml
user/gzip-core/: Cargo.toml
user/gzip-core/src/: cli.rs  crc32.rs  format.rs  lib.rs  pack.rs
user/gzip/src/: main.rs
user/head/: Cargo.toml
user/head/src/: main.rs
user/id/: Cargo.toml
user/id/src/: main.rs
user/ifconfig/: Cargo.toml
user/ifconfig/src/: main.rs
user/init/: Cargo.toml
user/init/src/: main.rs
user/install/: Cargo.toml
user/install/src/: main.rs
user/ip/: Cargo.toml
user/ip/src/: main.rs
user/kill/: Cargo.toml
user/kill/src/: main.rs
user/ls/: Cargo.toml
user/ls/src/: main.rs
user/lscpu/: Cargo.toml
user/lscpu/src/: main.rs
user/lspci/: Cargo.toml
user/lspci/src/: main.rs
user/lsusb/: Cargo.toml
user/lsusb/src/: main.rs
user/mkboot/: Cargo.toml
user/mkboot/src/: main.rs
user/mkdir/: Cargo.toml
user/mkdir/src/: main.rs
user/mkdisk/: Cargo.toml
user/mkdisk/src/: main.rs
user/mv/: Cargo.toml
user/mv/src/: main.rs
user/nano/: Cargo.toml
user/nano/src/: main.rs
user/nc/: Cargo.toml
user/nc/src/: main.rs
user/ping/: Cargo.toml
user/ping/src/: main.rs
user/pkill/: Cargo.toml
user/pkill/src/: main.rs
user/ps/: Cargo.toml
user/ps/src/: main.rs
user/readdirtest/: Cargo.toml
user/readdirtest/src/: main.rs
user/resolve/src/: main.rs
user/rm/: Cargo.toml
user/rm/src/: main.rs
user/rmdir/: Cargo.toml
user/rmdir/src/: main.rs
user/rtop/: Cargo.toml
user/rtop/src/: ansi_backend.rs  lib.rs  main.rs  raw.rs  sys.rs
user/ruos-rt/: Cargo.toml
user/ruos-rt/src/: lib.rs
user/server/src/: main.rs
user/service/: Cargo.toml
user/service/src/: main.rs
user/shell/: Cargo.toml
user/shell/src/: main.rs
user/smptest/: Cargo.toml
user/smptest/src/: main.rs
user/sort/: Cargo.toml
user/sort/src/: main.rs
user/spinloop/: Cargo.toml
user/spinloop/src/: main.rs
user/tail/: Cargo.toml
user/tail/src/: main.rs
user/tee/: Cargo.toml
user/tee/src/: main.rs
user/touch/: Cargo.toml
user/touch/src/: main.rs
user/tr/: Cargo.toml
user/tr/src/: main.rs
user/umount/: Cargo.toml
user/umount/src/: main.rs
user/uname/: Cargo.toml
user/uname/src/: main.rs
user/uniq/: Cargo.toml
user/uniq/src/: main.rs
user/unitctl/: Cargo.toml
user/unitctl/src/: main.rs
user/uptime/: Cargo.toml
user/uptime/src/: main.rs
user/wc/: Cargo.toml
user/wc/src/: main.rs
user/wget/: Cargo.toml
user/wget/src/: main.rs
user/which/: Cargo.toml
user/which/src/: main.rs
user/whoami/: Cargo.toml
user/whoami/src/: main.rs
user/wificonnect/: Cargo.toml
user/wificonnect/src/: main.rs
user/wifiscan/: Cargo.toml
user/wifiscan/src/: main.rs
user/zcat/: Cargo.toml
user/zcat/src/: main.rs
(+997 files in other folders)
