[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
limine = "0.6"
uart_16550 = "0.3"
talc = "4"
spin = "0.9"
x86_64 = "0.15"
acpi = "5"
bitflags = "2"
noto-sans-mono-bitmap = { version = "0.3", features = ["size_24"] }
vte = { version = "0.13", default-features = false, features = ["no_std"] }
embassy-executor = { version = "0.6", default-features = false, features = ["nightly", "task-arena-size-65536"] }
wasmi = { version = "1.0.9", default-features = false, features = ["prefer-btree-collections"] }
smoltcp = { version = "0.11", default-features = false, features = ["alloc", "medium-ip", "medium-ethernet", "proto-ipv4", "proto-dhcpv4", "socket-tcp", "socket-dhcpv4", "socket-icmp"] }
virtio-drivers = "0.13"
rand_chacha = { version = "0.3", default-features = false }
pci_types = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
# Force sha2 software backend: cpufeatures detection probes AVX intrinsics
# that LLVM refuses on x86_64-unknown-none. Direct dep ensures the feature
# unifies into the ed25519-dalek transitive dependency.
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
sunset = { path = "../third_party/sunset", default-features = false }
# getrandom needs an explicit custom backend on bare-metal — we wire it
# to crate::rng via register_custom_getrandom! in ssh/rng_bridge.rs.
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
log = { version = "0.4", default-features = false }

[features]
boot-checks = []
wasm-trace = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = false
codegen-units = 16
debug = 1
