[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
limine = "0.6"
uart_16550 = "0.3"
talc = "4"
spin = "0.9"
heapless = "0.8"
x86_64 = "0.15"
acpi = "5"
bitflags = "2"
noto-sans-mono-bitmap = { version = "0.3", features = ["size_24", "bold"] }
vte = { version = "0.13", default-features = false, features = ["no_std"] }
embassy-executor = { version = "0.6", default-features = false, features = ["nightly", "task-arena-size-65536"] }
wasmi = { version = "1.0.9", default-features = false, features = ["prefer-btree-collections"] }
wasmi_core = { version = "1.0.9", default-features = false }
# Wasmtime AOT runtime (no_std, runtime-only — no Cranelift/Winch). Spike for
# the egui desktop: runs precompiled .cwasm at near-native speed. See
# docs/superpowers/plans/2026-06-04-wasmtime-nostd-spike.md
wasmtime = { version = "=45.0.0", default-features = false, features = ["runtime", "custom-virtual-memory", "custom-sync-primitives", "component-model", "threads"] }
# Stack-switch fiber per i wasm-thread (MT Fase 2). Backend no_std upstream
# (stack su heap TryVec, niente guard pages; asm switch in stackswitch/x86_64).
wasmtime-internal-fiber = { version = "=45.0.0", default-features = false }
smoltcp = { version = "0.11", default-features = false, features = ["alloc", "medium-ip", "medium-ethernet", "proto-ipv4", "proto-dhcpv4", "socket-tcp", "socket-dhcpv4", "socket-icmp", "socket-dns"] }
virtio-drivers = "0.13"
rand_chacha = { version = "0.3", default-features = false }
pci_types = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
# Force sha2 software backend: cpufeatures detection probes AVX intrinsics
# that LLVM refuses on x86_64-unknown-none. Direct dep ensures the feature
# unifies into the ed25519-dalek transitive dependency.
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
# WPA2-PSK 4-way handshake (SP-WIFI-3): PMK=PBKDF2-HMAC-SHA1, PTK-PRF + MIC =
# HMAC-SHA1, GTK unwrap = AES-128 key-unwrap (RFC 3394). force-soft on sha1/aes
# for the same reason as sha2 (cpufeatures probes AES-NI/SHA-NI intrinsics that
# LLVM refuses on x86_64-unknown-none).
sha1 = { version = "0.10", default-features = false, features = ["force-soft"] }
hmac = { version = "0.12", default-features = false }
# aes 0.8 forces the soft backend via the `aes_force_soft` cfg (see .cargo/config),
# not a cargo feature — bare-metal must avoid the cpufeatures AES-NI autodetect.
aes = { version = "0.8", default-features = false }
sunset = { path = "../third_party/sunset", default-features = false }
# getrandom needs an explicit custom backend on bare-metal — we wire it
# to crate::rng via register_custom_getrandom! in ssh/rng_bridge.rs.
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
gzip-core = { path = "../user/gzip-core", default-features = false }
log = { version = "0.4", default-features = false }
xhci = "0.9"
# Rasterizzatore UI kernel-side (no_std, port di gui-core/raster.rs). Le finestre
# mesh-mode (wm.commit_mesh) copiano la mesh tessellata in WmState e il kernel la
# rasterizza nella surface. Vedi docs/.../2026-06-13-ui-kernel-side-raster-design.md.
ruos-raster = { path = "../ruos-raster" }

[features]
boot-checks = []
wasm-trace = []
# Netconsole: stream kernel log (INFO+) as UDP broadcast on 255.255.255.255:6666,
# captured with `nc -ul 6666`. Diagnostic; pulls in smoltcp's UDP socket. See
# docs/superpowers/specs/2026-06-08-netconsole-udp-design.md
netconsole = ["smoltcp/socket-udp"]
# Escape hatch: build with plain global talc (no per-core magazine). Use as a
# bisect baseline when investigating allocator-related regressions. The default
# (no flag) uses MagazineAlloc.
legacy-talc = []
# When set, the USB boot phase synchronously drains enumeration, prints a
# one-screen device summary, and halts — so a real machine with no serial can
# be photographed to see WHERE USB enumeration breaks. Diagnostic only.
# Use: `cargo build --features usb-probe`.
usb-probe = []
# Force the compositor to use a single band on the BSP (no SMP split). Used by
# the SP4 visual-equivalence test to capture a serial reference screendump.
serial-composite = []
# Force window frame() execution to run serially on the GUI core (no SMP
# dispatch across the compute pool). Bisect baseline for the parallel compositor
# (MT Fase 1); mirror of serial-composite for the frame() loop. Default = parallel.
wm-serial-frames = []
# Compositor framerate/timing telemetry: once per second the GUI loop logs
# present/s (visible FPS), loop iters/s, and avg/max frame_all + present time in
# µs (via TSC). Gated → zero overhead by default. Use to compare parallel vs
# `wm-serial-frames` dispatch cost. Greppable marker tag "wmfps".
wm-fps = []
# When set, a kernel panic halts (cli; hlt loop) instead of rebooting.
# Use for debugging: `cargo build --features panic-halt`.
# Default (no flag): panic triggers a controlled reboot via power::reboot().
panic-halt = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = false
codegen-units = 16
debug = 1

[patch.crates-io]
# Fork minimale wasmtime 45 per threads in no_std (MT Fase 2):
# threads senza "std", SharedMemory su sync interno, atomic wait/notify
# deviati sugli hook extern "C" wasmtime_futex_* (implementati in wt/threads.rs).
# Spec: docs/superpowers/specs/2026-06-12-wasm-mt-fase2-threads-design.md
wasmtime = { path = "../third_party/wasmtime45" }
# Fix backend no_std: anche il TOP dello stack fiber va allineato a 16 (lo
# stack cresce dal top; l'unwinder asserisce FP%16==0 al primo trap in un
# fiber). Una riga in align_ptr (nostd.rs) — vedi CHANGELOG/493.
wasmtime-internal-fiber = { path = "../third_party/wasmtime-fiber45" }
