[workspace]
resolver = "2"
members = [
    "init", "server", "client",
    "shell",
    "ls", "cat", "echo",
    "mkdir", "rmdir", "rm", "cp", "mv",
    "head", "tail", "grep", "find", "diff", "du",
    "whoami", "id", "uname", "uptime", "free", "df", "lscpu", "dmesg",
    "ps", "kill", "pkill",
    "lspci", "ip",
]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true
