[workspace]
resolver = "2"
members = [
    "init", "server", "client",
    "shell",
    "ls", "cat", "echo",
    "mkdir", "rmdir", "rm", "cp", "mv",
    "head", "tail", "grep", "find", "diff", "du",
    "whoami", "id", "uname", "uptime", "free", "df", "lscpu", "dmesg",
    "ps", "kill", "pkill",
    "lspci", "ip",
    "nano",
    "touch", "wc", "clear", "which",
    "sort", "uniq", "cut", "tr", "tee",
    "ifconfig", "nc", "date", "wget", "ping",
    "service",
]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true
